MODON MRE BPDEV/force-app/main/default/objects/SendGrid_Configuration__mdt/SendGrid_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>This metadata contains SendGrid URL, Key, ContentIds and Banner Names</description>
    <label>SendGrid Configuration</label>
    <pluralLabel>SendGrid Configurations</pluralLabel>
</CustomObject>