MODON MRE BPDEV/force-app/main/default/objects/SendGrid_Configuration__mdt/fields/Banner_Name__c.field-meta.xml
<CustomField>
    <fullName>Banner_Name__c</fullName>
    <label>Banner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>