MODON MRE BPDEV/force-app/main/default/objects/SendGrid_Configuration__mdt/fields/Content_Ids__c.field-meta.xml
<CustomField>
    <fullName>Content_Ids__c</fullName>
    <label>Content Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>