MODON MRE BPDEV/force-app/main/default/objects/SendGrid_Configuration__mdt/fields/SendGrid_API_KEY__c.field-meta.xml
<CustomField>
    <fullName>SendGrid_API_KEY__c</fullName>
    <label>SendGrid API KEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>