MODON MRE BPDEV/force-app/main/default/objects/SendGrid_Configuration__mdt/fields/SendGrid_API_URL__c.field-meta.xml
<CustomField>
    <fullName>SendGrid_API_URL__c</fullName>
    <label>SendGrid API URL</label>
    <type>Url</type>
</CustomField>